-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.522 2009-05-27 04:35:42 guru Exp $
-----------------------------------------------------------------------------------------

2009-05-26	pwessel
	* gmtconvert.c:	With -S, did not report the number of output segments.  Now allows
				-S~<pattern> which reports segments whose header does NOT contain pattern.
	
2009-05-25	pwessel
	* greenspline.c:	Calculation of nz layers were off by one, leaving out the
				penultimate layer.

2009-05-23	pwessel
	* mgd77/mgd77manage.c:	Now uses GMT_read_img to handle *.img files; earlier it could
				not handle the latest +-80 degree lats.  Also passed wrong filename variable.

2009-05-21	pwessel
	* gmt_io.c:		When only -mi is set there should be no multisegment headers on output
					but there was no if-test to check for that.
					
2009-05-21	remko
	* bin/*:		Removed bin directory from CVS.
	* gmtlogo, gmtget, psbbox.sh:	Moved to src directory. Created manuals for them.
	* gmtpatch.sh:		Moved to main directory.

2009-05-20	pwessel
	* psclip.c:		New option -T that turns on map region clipping without any
				input data files.  Shorthand for -N /dev/null.
	* x2sys/x2sys_list.c:	Can now accept list of weights for each track and output the
				composite weight for each crossover.
	* x2sys/x2sys_solve.c:	Option -W means an extra column with crossover weight.
	
2009-05-19	pwessel
	* misc/gmt2kml.c:	New program in the misc supplement that converts GMT table
				data to KML format for Google Earth.
	* misc/kml2gmt.c:	New programs that extracts GMT data tables from Google Earth
				KML files, perhaps after editing the latter in GE.

2009-05-19	remko
	* grd2xyz.c:		Fixed checking East boundary (bug introduced 2008-03-05).

2009-05-17	pwessel
	* sph:			No longer requires the f2c include and library to install.
	* configure.ac:		Removed the code that looked for the f2c library.

2009-05-17	jluis